# electric-demand-forecasting

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT_GUIDE.md  DEPLOY_HF_SPACES.md  DEPLOY_TO_EXISTING_SPACE.md  Deploy-to-HFSpaces.ps1  Dockerfile  HF_DEPLOYMENT_QUICKSTART.md  HF_SPACES_FINAL_STEPS.md  LICENSE  PHASE_6_COMPLETION.md  PRODUCTION_READINESS.md  README.md  deploy-to-hf.bat  mlflow.db  pyproject.toml  pytest.ini  requirements.txt  run.sh
.github/workflows/: daily_training.yml  data_ingestion.yml  sync_to_hub.yml
data/scripts/: run_pipeline.py
deployment/: config.yaml
mlflow_artifacts/models/m-85a99b2978764b0eb9459f3d6f5fa743/artifacts/: MLmodel  conda.yaml  model.pkl  registered_model_meta  requirements.txt
src/api/: main.py  model_loader.py
src/app/: dashboard.py
src/core/: __init__.py  config.py  metrics.py
src/data_ingestion/: ingest.py
src/data_processing/: process.py
src/training/: train.py
src/utils/: logger.py  upload_to_hf.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_config.py  test_validation.py
