[tool.poetry]
name = "ml-template"
version = "0.1.0"
description = "Template MLOps para Forecasting"
authors = ["Tu Nombre <tu@email.com>"]
package-mode = false  # <--- ¡Añade esta línea aquí!

[tool.poetry.dependencies]
python = "3.11.*"
pandas = "^2.2.2"
statsforecast = "^1.7.0"
mlflow = "^2.13.0"
pyarrow = "^15.0.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"